--- a/azure-go-sdk-conceptual/index.yml
+++ b/azure-go-sdk-conceptual/index.yml
@@ -16,15 +16,15 @@ metadata:
   ms.technology: azure
   ms.devlang: golang
   ms.service: multiple
-  ms.openlocfilehash: cd733628931b0b902438734340b1145ad9c179d6
-  ms.sourcegitcommit: aaa8c37880332625f858a38f5918e6cf581bf48d
+  ms.openlocfilehash: 7d39bfbab26f6249fd5d6662e2af0fb228e1c4f6
+  ms.sourcegitcommit: 890f5f01a70e7e376e6bb98a2030afbfc016f538
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 02/15/2018
+  ms.lasthandoff: 03/01/2018
 sections:
 - items:
   - type: markdown
-    text: "Kom igång med att utveckla appar med Azure SDK för Go med våra officiella självstudier och verktyg.\n"
+    text: "Kom igång och utveckla appar med [Azure SDK för Go](https://github.com/Azure/azure-sdk-for-go) med hjälp av våra officiella självstudier och verktyg.\n"
 - items:
   - type: list
     style: cards
