Commit translated content

--- a/azure-go-sdk-conceptual/TOC.yml
+++ b/azure-go-sdk-conceptual/TOC.yml
@@ -19,7 +19,18 @@ items:
         href: /azure/mysql/connect-go?toc=%2fgo%2fazure%2ftoc.json
       - name: Azure SQL Database
         href: /azure/sql-database/sql-database-connect-query-go?toc=%2fgo%2fazure%2ftoc.json
-  - name: Exempel
-    href: 'http://github.com/azure-samples/azure-sdk-for-go-samples'
+  - name: Go-kodexempel
+    items:
+      - name: Autentisering och Active Directory
+        href: azure-sdk-go-auth-aad-samples.md
+      - name: Behållare
+        href: azure-sdk-go-containers-samples.md
+      - name: Beräkning och nätverk
+        href: azure-sdk-go-compute-networking-samples.md
+      - name: Azure SQL Database
+        href: azure-sdk-go-sql-database-samples.md
+      - name: Alla Go-kodexempel
+        href: 'http://github.com/azure-samples/azure-sdk-for-go-samples'
+    href: null
   - name: API-referens
     href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go'
