--- a/azure-go-sdk-conceptual/index.yml
+++ b/azure-go-sdk-conceptual/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Azure för Go-utvecklare"
+title: Azure för Go-utvecklare
 metadata:
-  title: "Azure för Go-utvecklare – självstudier, API-referens"
-  description: "Kom igång med att utveckla med Azure SDK för Go med resurserna för utvecklare här nedan."
+  title: Azure för Go-utvecklare – självstudier, API-referens
+  description: Kom igång med att utveckla med Azure SDK för Go med resurserna för utvecklare här nedan.
   keywords: Azure, Go, golang, SDK, API
   author: sptramer
   ms.author: sttramer
@@ -21,23 +21,25 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 03/01/2018
+  ms.locfileid: "29716018"
 sections:
 - items:
   - type: markdown
-    text: "Kom igång och utveckla appar med [Azure SDK för Go](https://github.com/Azure/azure-sdk-for-go) med hjälp av våra officiella självstudier och verktyg.\n"
+    text: >
+      Kom igång och utveckla appar med [Azure SDK för Go](https://github.com/Azure/azure-sdk-for-go) med hjälp av våra officiella självstudier och verktyg.
 - items:
   - type: list
     style: cards
     className: cardsM
     columns: 2
     items:
-    - title: "Kom igång"
-      html: "<p>Installera Azure SDK för Go</p>"
+    - title: Kom igång
+      html: <p>Installera Azure SDK för Go</p>
       href: https://docs.microsoft.com/go/azure/azure-sdk-go-install
       image:
         src: https://docs.microsoft.com/media/common/i_get-started.svg
     - title: Kodexempel
-      html: "<p>Azure-kodexempel som använder Go</p>"
+      html: <p>Azure-kodexempel som använder Go</p>
       image:
         src: https://docs.microsoft.com//media/common/i_code-samples.svg
       href: https://github.com/azure-samples/azure-sdk-for-go-samples
@@ -47,24 +49,24 @@ sections:
       image:
         src: https://docs.microsoft.com/media/common/i_download-install.svg
     - title: API-referens
-      html: "<p>GoDoc för Azure SDK för Go</p>"
+      html: <p>GoDoc för Azure SDK för Go</p>
       href: https://godoc.org/github.com/Azure/azure-sdk-for-go
       image:
         src: https://docs.microsoft.com/media/common/i_api-reference.svg
-- title: "Snabbstarter för Go SDK"
+- title: Snabbstarter för Go SDK
   items:
   - type: paragraph
-    text: "Lär dig hur du använder Azure SDK för Go."
+    text: Lär dig hur du använder Azure SDK för Go.
   - type: list
     style: cards
     className: cardsM
     columns: 2
     items:
-    - title: "Distribuera en virtuell dator från en Azure-resursmall med Go"
+    - title: Distribuera en virtuell dator från en Azure-resursmall med Go
       href: https://docs.microsoft.com/go/azure/azure-sdk-go-qs-vm
       image:
         src: https://docs.microsoft.com/azure/virtual-machines/media/index/virtualmachine.svg
-    - title: "Överföra objekt till Azure Blob Storage med hjälp av Azure Storage SDK för Go"
+    - title: Överföra objekt till Azure Blob Storage med hjälp av Azure Storage SDK för Go
       href: https://docs.microsoft.com/azure/storage/blobs/storage-quickstart-blobs-go?toc=%2fgo%2fazure%2ftoc.json
       image:
         src: https://docs.microsoft.com/azure/media/index/logo_azure-blob-storage.svg
@@ -77,8 +79,8 @@ sections:
     - type: list
       style: unordered
       items:
-      - html: "<a href=\"https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/iam\">Autentisera med Azure-tjänster</a>"
+      - html: <a href="https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/iam">Autentisera med Azure-tjänster</a>
       - html: <a href="https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/compute">Skapa en ny virtuell dator</a>
-      - html: "<a href=\"https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/containerinstance\">Distribuera en behållare till Azure Container Instances</a>"
+      - html: <a href="https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/containerinstance">Distribuera en behållare till Azure Container Instances</a>
       - html: <a href="https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/containerservice">Skapa ett kluster i Azure Kubernetes Service</a>
-      - html: "<a href=\"https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/storage\">Arbeta med Azure Storage-tjänster</a>"
+      - html: <a href="https://github.com/Azure-Samples/azure-sdk-for-go-samples/tree/master/storage">Arbeta med Azure Storage-tjänster</a>
